--- a/cisi543b/Makefile
+++ b/cisi543b/Makefile
@@ -108,6 +108,39 @@ asc9:
 	docker-compose -f docker-compose.prod.yml run app bundle exec rake assets:precompile 
 	
   
+
+# Database 
+
+#
+# 2020-09-22 i used dumpall, and impall to move from docker named volume to folder mounted. works ok.
+# dump was used as an extra backup before doing the migration.
+#
+
+dump:
+	docker-compose  exec dbm /bin/bash /script/all-individual-mysqldump.sh
+
+dumpall:
+	docker-compose  exec dbm /bin/bash -c 'exec mysqldump --force  --user=root -p"$$MYSQL_ROOT_PASSWORD" --all-databases  \
+      --routines   --events  > /mydat/db_mysqldump-alldb-events.$$(date +"%Y-%m-%d_%H.%M.%S").sql '
+
+impall:
+	  docker-compose  exec dbm /bin/bash -c 'exec mysql --local-infile=1 -uroot \
+	  	-p"$$MYSQL_ROOT_PASSWORD"  < /mydat/db_mysqldump-alldb-events.sql '
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -116,6 +149,17 @@ asc9:
 
  
 
+
+
+
+
+
+
+
+
+
+
+ 
 te:
   # test accessing exported env variable.
 	echo $${PWD##*/}
