adj.per.minutes.2020-11-10

--- a/cisi543b/Makefile
+++ b/cisi543b/Makefile
@@ -47,7 +47,7 @@ devisfn:
 
 
 seeddump:
-	docker-compose  exec web rails db:seed:dump FILE=db/seeds/seeddump00.rb
+	docker-compose  exec web rails db:seed:dump FILE=db/seeddump00.rb
 
 
 #
