--- a/cisi543b/example.env
+++ b/cisi543b/example.env
@@ -7,10 +7,10 @@
 # gem 'dotenv-rails', '>= 2.0.0'
 
 
-DATABASE_USERNAME=dg417
+DATABASE_USERNAME=dg
 DATABASE_PASSWORD=x
-DBPASS1=dg
-SECRET_KEY_BASE=59a2373423ffge3
+DBPASS1=x
+SECRET_KEY_BASE=59a2373c5gh423ffge3
 
 # Intercept mail on staging, to be sent to the following recipients
 # Example: "user@domain.tld,other-user@domain.tld"
