--- a/cisi543b/docker-compose.yml
+++ b/cisi543b/docker-compose.yml
@@ -150,6 +150,8 @@ services:
       - ./vol/nginx/certs:/etc/nginx/certs:ro
       - ./vol/nginx/html:/usr/share/nginx/html
       - ./vol/nginx/vhost.d:/etc/nginx/vhost.d:ro
+      # dgleba add hardening by using this enhanced config.
+      - ./docker/jproxy/nginxhard.conf:/etc/nginx/nginx.conf
       # - ./vol/nginx/conf.d:/etc/nginx/conf.d/
       # if need be add this file with your global settings..
       # - ./vol/nginx/conf.d/my_proxy.conf:/etc/nginx/conf.d/my_proxy.conf:ro
@@ -195,8 +197,8 @@ services:
     expose:
       - "8083"
     volumes:
-      - ./docker/nginx_h/nginxmain.conf:/etc/nginx/nginx.conf
-      - ./docker/nginx_h/default.conf:/etc/nginx/conf.d/default.conf
+      # - ./docker/nginx_h/nginxmain.conf:/etc/nginx/nginx.conf
+      # - ./docker/nginx_h/default.conf:/etc/nginx/conf.d/default.conf
       - ./homepage:/usr/share/nginx/html
     restart: always
     networks:
