--- a/cisi543b/docker-compose.prod.yml
+++ b/cisi543b/docker-compose.prod.yml
@@ -55,7 +55,7 @@ services:
       - 6031:80
     restart: always
     volumes:
-      - ./docker/nginxall.conf:/etc/nginx/nginx.conf
+      - ./docker/prodweb-nginx/nginxall.conf:/etc/nginx/nginx.conf
       # - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
       # - ./index.html:/usr/share/nginx/html/index.html
     networks:
