fix.413nginx.error

--- a/cisi543b/docker/jproxy/nginxhard-2020-12-02.conf
+++ b/cisi543b/docker/jproxy/nginxhard-2020-12-02.conf
@@ -47,11 +47,10 @@ http {
 
     ##OLD, PROTECT AGAINST BUFFER OVERFLOW?? BELOW LOOKS BETTER
     ##buffer policy
-    # client_body_buffer_size 5K;
+    client_body_buffer_size 5K;
     client_header_buffer_size 5k;
-    # 413 (Request Entity Too Large) 
-    client_max_body_size 200k;
-    # large_client_header_buffers 2 8k;
+    client_max_body_size 1k;
+    large_client_header_buffers 2 5k;
     ##end buffer policy
 
 
