--- a/cisi543b/docker/prodweb-nginx/nginxall-hard-413error.conf
+++ b/cisi543b/docker/prodweb-nginx/nginxall-hard-413error.conf
@@ -45,10 +45,10 @@ http {
 
     ##OLD, PROTECT AGAINST BUFFER OVERFLOW?? BELOW LOOKS BETTER
     ##buffer policy
-    # client_body_buffer_size 5K;
-    # client_header_buffer_size 5k;
-    # client_max_body_size 1k;
-    # large_client_header_buffers 2 5k;
+    client_body_buffer_size 5K;
+    client_header_buffer_size 5k;
+    client_max_body_size 1k;
+    large_client_header_buffers 2 5k;
     ##end buffer policy
 
 
