--- a/cisi543b/docker-compose.yml
+++ b/cisi543b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
       - VIRTUAL_NETWORK=sister
       - VIRTUAL_HOST=cidev.powderforward.com
       - LETSENCRYPT_HOST=cidev.powderforward.com
-    ports:
-      - 16123:3000
+    # ports:
+    #   - 16123:3000
     networks:
       - sister
       - net543b
@@ -57,8 +57,8 @@ services:
 
   dbm:
     image: mysql:5.7
-    ports: 
-      - 16125:3306
+    # ports: 
+    #   - 16125:3306
     env_file:
       - .env
     restart: unless-stopped
@@ -94,8 +94,8 @@ services:
     # 10.4.1.231:6117/
     image: adminer:4.7
     restart: always
-    ports:
-      - 16126:8080
+    # ports:
+    #   - 16126:8080
     environment:
       - ADMINER_DEFAULT_SERVER=dbm
       # - ADMINER_PLUGINS='tables-filter tinymce'
@@ -192,8 +192,8 @@ services:
   home:
     # 192.168.88.60:6216
     image: nginx:1.19-alpine
-    ports:
-      - "6219:8083"
+    # ports:
+    #   - "6219:8083"
     expose:
       - "8083"
     volumes:
