--- a/cisi543b/docker-compose.yml
+++ b/cisi543b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     networks:
       - sister
       - net543b
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     #
     # command: bash -c  "bundle check || bundle install --jobs 40 --retry 5 \
     # && bundle exec puma -C config/puma.rb -p 3000  "
